fix(instance) hide vertical scrollbars during rerender

--- a/src/sass/_instance_list.scss
+++ b/src/sass/_instance_list.scss
@@ -103,6 +103,7 @@
     thead,
     tbody {
       display: block;
+      overflow-x: hidden;
       overflow-y: auto;
       scrollbar-gutter: stable;
     }
